--- a/index.html
+++ b/index.html
@@ -9,21 +9,11 @@
 <body>
   <!-- Splash -->
   <div id="splash">
-    <h1>Memory Match</h1>
     <div class="splash-cards"></div>
   </div>
-  <!-- Auth -->
-  <div id="auth" class="hidden">
-    <div class="popup-content square">
-      <input type="email" id="email" placeholder="Email">
-      <input type="password" id="password" placeholder="Password">
-      <button class="btn" id="loginBtn">Login</button>
-      <button class="btn" id="signupBtn">Sign Up</button>
-    </div>
-  </div>
   <!-- Home -->
-  <div id="home" class="hidden">
-    <div class="popup-content square home-box">
+  <div id="home">
+    <div class="home-content">
       <h1>Memory Match</h1>
       <button class="btn" id="startBtn">Start</button>
     </div>
@@ -31,10 +21,19 @@
   <!-- Resume Popup -->
   <div id="resumePopup" class="popup hidden">
     <div class="popup-content square popup-zoom">
-      <h2>Resume Game?</h2>
-      <p>Resume from last level or start over?</p>
+      <h2>Continue?</h2>
+      <button class="btn" id="resumeHomeBtn">Home</button>
+      <button class="btn" id="watchAdResumeBtn">Watch Ad (5s) to Continue</button>
       <button class="btn" id="restartFrom1Btn">Restart from Level 1</button>
-      <button class="btn" id="resumeBtn">Watch Ad (5s) to Continue</button>
+    </div>
+  </div>
+  <!-- Auth -->
+  <div id="auth" class="popup hidden">
+    <div class="popup-content square popup-zoom">
+      <input type="email" id="email" placeholder="Email">
+      <input type="password" id="password" placeholder="Password">
+      <button class="btn" id="loginBtn">Login</button>
+      <button class="btn" id="signupBtn">Sign Up</button>
     </div>
   </div>
   <!-- Game -->
@@ -84,6 +83,9 @@
   <audio id="audio-lose" src="lose.mp3"></audio>
   <audio id="audio-pause" src="pause.mp3"></audio>
   <audio id="audio-restart" src="restart.mp3"></audio>
+  <footer>
+    <span class="powered">Powered by <span>NAS</span></span>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
