--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <div class="splash-cards"></div>
   </div>
   <!-- Login/Signup -->
-  <div id="auth" class="popup hidden">
-    <div class="popup-content square popup-zoom">
+  <div id="auth">
+    <div class="auth-content">
       <h2>Login / Signup</h2>
       <input type="email" id="email" placeholder="Email">
       <input type="password" id="password" placeholder="Password">
-      <button class="btn" id="loginBtn">Login</button>
-      <button class="btn" id="signupBtn">Sign Up</button>
+      <div class="auth-btns">
+        <button class="btn" id="loginBtn">Login</button>
+        <button class="btn" id="signupBtn">Sign Up</button>
+      </div>
     </div>
   </div>
   <!-- Home -->
@@ -31,7 +33,7 @@
   </div>
   <!-- Resume Popup -->
   <div id="resumePopup" class="popup hidden">
-    <div class="popup-content square popup-zoom small-popup">
+    <div class="popup-content square popup-zoom big-popup">
       <h2>Continue?</h2>
       <button class="btn" id="resumeHomeBtn">Home</button>
       <button class="btn" id="watchAdResumeBtn">Watch Ad (5s) to Continue</button>
@@ -43,9 +45,15 @@
     <div class="game-header">
       <h1>Memory Match</h1>
       <div class="game-controls">
-        <button class="ctrl-btn" id="soundSwitch">🔊</button>
-        <button class="ctrl-btn" id="pauseBtn">⏸️</button>
-        <button class="ctrl-btn" id="vibrationSwitch">📳</button>
+        <label class="switch-label">Sound
+          <input type="checkbox" id="soundSwitch" checked>
+          <span class="switch-slider"></span>
+        </label>
+        <label class="switch-label">Vibration
+          <input type="checkbox" id="vibrationSwitch" checked>
+          <span class="switch-slider"></span>
+        </label>
+        <button class="ctrl-btn" id="pauseBtn">Pause</button>
       </div>
     </div>
     <div class="stats">
@@ -57,16 +65,26 @@
   </div>
   <!-- Win Popup -->
   <div id="winPopup" class="popup hidden">
-    <div class="popup-content square popup-zoom small-popup">
+    <div class="popup-content square popup-zoom big-popup">
       <h2>You Win!</h2>
+      <div class="result">
+        <span id="resultLevel"></span>
+        <span id="resultScore"></span>
+        <span id="resultTime"></span>
+      </div>
       <button class="btn" id="nextLevelBtn">Next Level</button>
       <button class="btn" id="homeBtn1">Home</button>
     </div>
   </div>
   <!-- Lose Popup -->
   <div id="losePopup" class="popup hidden">
-    <div class="popup-content square popup-zoom small-popup">
+    <div class="popup-content square popup-zoom big-popup">
       <h2>You Lost!</h2>
+      <div class="result">
+        <span id="resultLevelL"></span>
+        <span id="resultScoreL"></span>
+        <span id="resultTimeL"></span>
+      </div>
       <button class="btn" id="playAgainBtn">Play Again</button>
       <button class="btn" id="loseHomeBtn">Home</button>
       <button class="btn" id="watchAdBtn">Watch Ad (5s) to Continue</button>
@@ -74,7 +92,7 @@
   </div>
   <!-- Ad Popup -->
   <div id="adPopup" class="popup hidden">
-    <div class="popup-content square popup-zoom small-popup">
+    <div class="popup-content square popup-zoom big-popup">
       <h2>Ad</h2>
       <p>Watching ad... Please wait <span id="adTimer">5</span>s</p>
     </div>
