--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <h1>MEMORY MATCH</h1>
     <div class="splash-cards"></div>
   </div>
-  <!-- Login/Signup (screen, not popup) -->
+  <!-- Login/Signup -->
   <div id="auth" class="hidden">
-    <div class="auth-content">
+    <form class="auth-form">
       <h2>Login / Signup</h2>
-      <input type="email" id="email" placeholder="Email">
-      <input type="password" id="password" placeholder="Password">
-      <button class="auth-btn" id="loginBtn">Login</button>
-      <button class="auth-btn" id="signupBtn">Sign Up</button>
-    </div>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="button" class="auth-btn" id="loginBtn">Login</button>
+      <button type="button" class="auth-btn" id="signupBtn">Sign Up</button>
+    </form>
   </div>
   <!-- Home -->
   <div id="home" class="hidden">
@@ -50,7 +50,7 @@
           </label>
           <span class="switch-label">Sound</span>
         </div>
-        <button class="pause-btn" id="pauseBtn"></button>
+        <button class="pause-btn" id="pauseBtn"><span class="pause-icon"></span></button>
         <div class="switch-col">
           <label class="switch">
             <input type="checkbox" id="vibrationSwitch" checked>
@@ -66,6 +66,7 @@
       <span id="timerDisplay" class="stat-time">Time: 00</span>
     </div>
     <div id="board"></div>
+    <img src="doge.png" class="doge-img" alt="doge">
   </div>
   <!-- Win Popup -->
   <div id="winPopup" class="popup hidden">
@@ -108,7 +109,7 @@
   <audio id="audio-pause" src="pause.mp3"></audio>
   <audio id="audio-restart" src="restart.mp3"></audio>
   <footer>
-    <span class="powered">Powered by <span>NAS</span></span>
+    <span class="powered">Powered by <span class="neon">NAS</span></span>
   </footer>
   <script src="script.js"></script>
 </body>
