--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
             <span class="toggle-text">Vibration</span>
         </div>
       </div>
-      <!-- Removed .switch-texts div as text is now with toggles -->
     </div>
     <div class="stats">
       <span id="levelDisplay">Level: 1</span>
@@ -108,9 +107,18 @@
   <audio id="audio-lose" src="lose.mp3"></audio>
   <audio id="audio-pause" src="pause.mp3"></audio>
   <audio id="audio-restart" src="restart.mp3"></audio>
+  <!-- New Match Sounds -->
+  <audio id="audio-gwak" src="gwak.mp3"></audio>
+  <audio id="audio-tamatar" src="tamatar.mp3"></audio>
+  <audio id="audio-mor" src="mor.mp3"></audio>
+  <audio id="audio-sigma" src="sigma.mp3"></audio>
+  <audio id="audio-birthday" src="birthday.mp3"></audio>
+  <audio id="audio-sitar" src="sitar.mp3"></audio>
+  <audio id="audio-bell" src="bell.mp3"></audio>
+
   <footer>
     <span class="powered">Powered by <span>NAS</span></span>
   </footer>
   <script src="script.js"></script>
 </body>
-    </html>
+</html>
