--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Memory Match</title>
+  <!-- viewport meta tag with user-scalable=no for Android resolution consideration -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -115,6 +116,8 @@
   <audio id="audio-birthday" src="birthday.mp3"></audio>
   <audio id="audio-sitar" src="sitar.mp3"></audio>
   <audio id="audio-bell" src="bell.mp3"></audio>
+  <!-- New sound for Continue window -->
+  <audio id="audio-koni" src="koni.mp3"></audio>
 
   <footer>
     <span class="powered">Powered by <span>NAS</span></span>
