--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
   <audio id="audio-koni" src="koni.mp3"></audio>
 
   <footer>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '8a596a14d2ea184cd9b6372e267b931c',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8a596a14d2ea184cd9b6372e267b931c/invoke.js"></script>
     <span class="powered">Powered by <span>NAS</span></span>
   </footer>
   <script src="script.js"></script>
