--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/8a596a14d2ea184cd9b6372e267b931c/invoke.js"></script>
-    
+  </div>
     <span class="powered">Powered by <span>NAS</span></span>
   </footer>
   <script src="script.js"></script>
