--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Memory Match</title>
+  <!-- viewport meta tag with user-scalable=no for Android resolution consideration -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="stylesheet" href="style.css">
   <script type='text/javascript' src='//pl26859944.profitableratecpm.com/0d/45/39/0d4539f09727c641fc77330a16feaa38.js'></script>
@@ -159,4 +160,4 @@
   </div>
   <script src="script.js"></script>
 </body>
-  </html>
+</html>
