--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,10 +6,8 @@
   <!-- viewport meta tag with user-scalable=no for Android resolution consideration -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="stylesheet" href="style.css">
-  <script type='text/javascript' src='//pl26859944.profitableratecpm.com/0d/45/39/0d4539f09727c641fc77330a16feaa38.js'></script>
 </head>
 <body>
-  <div id="pageOverlay" class="hidden"></div>
   <!-- Splash -->
   <div id="splash">
     <h1>Memory Match</h1>
@@ -21,6 +18,15 @@
     <div class="home-content">
       <h1>Memory Match</h1>
       <button class="btn" id="startBtn">Start</button>
+    </div>
+  </div>
+  <!-- Resume Popup -->
+  <div id="resumePopup" class="popup hidden">
+    <div class="popup-content square popup-zoom">
+      <h2>Continue?</h2>
+      <button class="btn" id="resumeHomeBtn">Home</button>
+      <button class="btn" id="watchAdResumeBtn">Watch Ad (5s) to Continue</button>
+      <button class="btn" id="restartFrom1Btn">Restart from Level 1</button>
     </div>
   </div>
   <!-- Auth -->
@@ -85,46 +91,15 @@
         <span id="resultTimeL">Time Left: 0s</span>
       </div>
       <button class="btn" id="playAgainBtn">Play Again</button>
-      <button class="btn" id="loseWatchAdBtn">Watch Ad 5 sec to Continue</button>
-      <button class="btn" id="loseRestartHomeBtn">Home</button>
+      <button class="btn" id="loseHomeBtn">Home</button>
+      <button class="btn" id="watchAdBtn">Watch Ad (5s) to Continue</button>
     </div>
   </div>
-  <!-- Continue Popup -->
-  <div id="continuePopup" class="popup hidden">
+  <!-- Ad Popup -->
+  <div id="adPopup" class="popup hidden">
     <div class="popup-content square popup-zoom">
-      <h2>Continue?</h2>
-      <button class="btn" id="watchAdContinueBtn">Watch Ad 5 sec to Continue</button>
-      <button class="btn" id="continueHomeBtn">Home</button>
-      <button class="btn" id="startFromLevel1Btn">Start from Level 1</button>
-    </div>
-  </div>
-  <!-- Ad Overlay Popup -->
-  <div id="adOverlay" class="popup hidden">
-    <div class="popup-content">
-      <h2 id="adOverlayMessage">Please wait... unlocking your reward</h2>
-      <p id="adOverlayTimer" style="font-size: 1.5em; margin-top: 10px;">5</p>
-    </div>
-  </div>
-  <!-- Custom Reward Screen -->
-  <div id="customRewardScreen" class="hidden">
-    <div id="immediateAdContainerTop">
-      <div id="immediateAdPlaceholder"></div> <!-- Placeholder for immediate ad -->
-    </div>
-    <div id="rewardTopLeftContainer">
-      <div id="rewardCountdownTimer">5</div>
-      <button id="rewardBackButton" class="hidden">←</button>
-    </div>
-    <div id="rewardTopRightContainer" class="hidden">
-      <div id="rewardGuaranteedLabel">Reward Guaranteed</div>
-      <div id="rewardAdBannerContainer_468x60">
-        <!-- Ad 1 (468x60) script injected here -->
-      </div>
-      <div id="rewardAdBannerContainer_300x250">
-        <!-- Ad 2 (300x250) script injected here -->
-      </div>
-      <div id="rewardAdBannerContainer_responsive">
-        <!-- Ad 3 (Responsive) script and its div injected here -->
-      </div>
+      <h2>Ad</h2>
+      <p>Watching ad... Please wait <span id="adTimer">5</span>s</p>
     </div>
   </div>
   <!-- Sounds -->
@@ -141,24 +116,12 @@
   <audio id="audio-birthday" src="birthday.mp3"></audio>
   <audio id="audio-sitar" src="sitar.mp3"></audio>
   <audio id="audio-bell" src="bell.mp3"></audio>
+  <!-- New sound for Continue window -->
+  <audio id="audio-koni" src="koni.mp3"></audio>
 
-  <div id="stickyFooter">
-    <div id="bannerAdContainer">
-      <script type="text/javascript">
-        atOptions = {
-          'key' : '8a596a14d2ea184cd9b6372e267b931c',
-          'format' : 'iframe',
-          'height' : 50,
-          'width' : 320,
-          'params' : {}
-        };
-      </script>
-      <script type="text/javascript" src="//www.highperformanceformat.com/8a596a14d2ea184cd9b6372e267b931c/invoke.js"></script>
-    </div>
-    <footer>
-      <span class="powered">Powered by <span>NAS</span></span>
-    </footer>
-  </div>
+  <footer>
+    <span class="powered">Powered by <span>NAS</span></span>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
