--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@
       <button class="btn start-btn orange-btn" id="startBtn">Start</button>
 
         <script type="text/javascript">
-            atOptions = {
-                'key' : '8a596a14d2ea184cd9b6372e267b931c',
-                'format' : 'iframe',
-                'height' : 50,
-                'width' : 320,
-                'params' : {}
-            };
+        style="width:100%;text-align:center;position:absolute;left:0;bottom:0;background:none;filter:none;backdrop-filter:none;">
+      <div style="width:100%;text-align:center;margin-bottom:10px;background:none;filter:none;backdrop-filter:none;">
+        <script type="text/javascript">
+          atOptions = {
+            'key' : '8a596a14d2ea184cd9b6372e267b931c',
+            'format' : 'iframe',
+            'height' : 50,
+            'width' : 320,
+            'params' : {}
+          };
         </script>
         <script type="text/javascript" src="//www.highperformanceformat.com/8a596a14d2ea184cd9b6372e267b931c/invoke.js"></script>
-    </div>
-
+      </div>
       <span class="powered">Powered by <span>NAS</span></span>
       </footer>
     </div>
