--- a/index.html
+++ b/index.html
@@ -39,8 +39,53 @@
   <div id="home" class="hidden center-outer">
     <div class="center-inner home-content">
       <h1 class="home-title">Memory Match</h1>
+      <!-- Top Ad -->
+      <div class="home-ad home-ad-top">
+        <script type="text/javascript">
+          atOptions = {
+            'key' : '3606c322c11ecc95fb215e54122b24b9',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+          };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/3606c322c11ecc95fb215e54122b24b9/invoke.js"></script>
+      </div>
       <button class="btn start-btn orange-btn" id="startBtn">Start</button>
-      <div class="home-banner-ad">
+      
+      <!-- New Ads below Start button -->
+      <div style="margin-top:0.5in; display:flex; flex-direction:column; align-items:center;">
+        <!-- First Ad (as given) -->
+        <div style="margin-bottom:10px;">
+          <script type="text/javascript">
+            atOptions = {
+              'key' : '3606c322c11ecc95fb215e54122b24b9',
+              'format' : 'iframe',
+              'height' : 250,
+              'width' : 300,
+              'params' : {}
+            };
+          </script>
+          <script type="text/javascript" src="//www.highperformanceformat.com/3606c322c11ecc95fb215e54122b24b9/invoke.js"></script>
+        </div>
+        <!-- Second Ad (as given) -->
+        <div>
+          <script type="text/javascript">
+            atOptions = {
+              'key' : '8a596a14d2ea184cd9b6372e267b931c',
+              'format' : 'iframe',
+              'height' : 50,
+              'width' : 320,
+              'params' : {}
+            };
+          </script>
+          <script type="text/javascript" src="//www.highperformanceformat.com/8a596a14d2ea184cd9b6372e267b931c/invoke.js"></script>
+        </div>
+      </div>
+      
+      <!-- Bottom Ad -->
+      <div class="home-ad home-ad-bottom">
         <script type="text/javascript">
           atOptions = {
             'key' : '8a596a14d2ea184cd9b6372e267b931c',
@@ -147,4 +192,4 @@
   <audio id="sound_bell" src="bell.mp3" preload="auto"></audio>
   <script src="script.js"></script>
 </body>
-</html>
+    </html>
