--- a/ad.html
+++ b/ad.html
@@ -3,103 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>Blue Gradient Blur Screen with Timer & Orange Back</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    html, body { height: 100%; margin: 0; padding: 0; box-sizing: border-box; }
+    body { min-height: 100vh; width: 100vw; position: relative; background: linear-gradient(135deg, #0a2a88 0%, #00c6fb 100%);}
+    .bg-gradient { position: fixed; inset: 0; width: 100vw; height: 100vh; z-index: 0; background: linear-gradient(135deg, #0a2a88 0%, #00c6fb 100%); filter: blur(22px); pointer-events: none;}
+    .top-bar { position: fixed; top: 12px; left: 12px; right: 12px; display: flex; justify-content: space-between; align-items: flex-start; z-index: 2; pointer-events: none;}
+    .timer, .back-btn { background: rgba(255,255,255,0.13); color: #fff; font-size: 1rem; font-weight: 600; border-radius: 8px; padding: 4px 12px 4px 8px; min-width: 28px; min-height: 24px; box-shadow: 0 1px 6px 0 rgba(0,0,0,0.08); backdrop-filter: blur(4px); border: none; outline: none; pointer-events: auto; display: flex; align-items: center; gap: 4px; transition: background 0.2s;}
+    .back-btn { cursor: pointer; padding: 0; min-width: 0; min-height: 0; background: linear-gradient(135deg, #ff9800, #ff5722); box-shadow: 0 1px 8px 0 rgba(255,140,0,0.14); border-radius: 50%; width: 32px; height: 32px; justify-content: center; align-items: center; display: flex; border: none;}
+    .back-btn svg { width: 18px; height: 18px; display: block; fill: #fff;}
+    .reward-label { font-size: 0.55rem; color: #fff; background: rgba(0,0,0,0.10); border-radius: 7px; padding: 2px 7px; font-weight: 500; letter-spacing: 0.06em; margin-left: 6px; pointer-events: auto; user-select: none; align-self: flex-start; display: none;}
+    .reward-label.show { display: inline-block;}
+    .center-ad-wrapper { width: 100%; display: flex; justify-content: center; align-items: center; min-height: 60vh; z-index: 1; margin-top: 18vh; margin-bottom: 18vh; pointer-events: none;}
+    .center-ad-inner { pointer-events: auto;}
+    @media (max-width: 600px) {
+      .top-bar { top: 4vw; left: 4vw; right: 4vw;}
+      .timer, .back-btn { font-size: 0.9rem; min-width: 24px; min-height: 20px; padding: 3px 8px 3px 6px;}
+      .back-btn { width: 28px; height: 28px;}
+      .reward-label { font-size: 0.45rem; padding: 2px 5px;}
+      .center-ad-wrapper { min-height: 40vh; margin-top: 10vh; margin-bottom: 10vh;}
     }
-    body {
-      min-height: 100vh;
-      width: 100vw;
-      overflow: hidden;
-      position: relative;
-    }
-    .bg-gradient {
-      position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
-      background: linear-gradient(135deg, #0a2a88 0%, #00c6fb 100%);
-      filter: blur(22px);
-    }
-    .top-bar {
-      position: fixed;
-      top: 12px;
-      left: 12px;
-      right: 12px;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      z-index: 2;
-      pointer-events: none;
-    }
-    .timer, .back-btn {
-      background: rgba(255,255,255,0.13);
-      color: #fff;
-      font-size: 1rem;
-      font-weight: 600;
-      border-radius: 8px;
-      padding: 4px 12px 4px 8px;
-      min-width: 28px;
-      min-height: 24px;
-      box-shadow: 0 1px 6px 0 rgba(0,0,0,0.08);
-      backdrop-filter: blur(4px);
-      border: none;
-      outline: none;
-      pointer-events: auto;
-      display: flex;
-      align-items: center;
-      gap: 4px;
-      transition: background 0.2s;
-    }
-    .back-btn {
-      cursor: pointer;
-      padding: 0;
-      min-width: 0;
-      min-height: 0;
-      background: linear-gradient(135deg, #ff9800, #ff5722);
-      box-shadow: 0 1px 8px 0 rgba(255,140,0,0.14);
-      border-radius: 50%;
-      width: 32px;
-      height: 32px;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-      border: none;
-    }
-    .back-btn svg {
-      width: 18px;
-      height: 18px;
-      display: block;
-      fill: #fff;
-    }
-    .reward-label {
-      font-size: 0.55rem;
-      color: #fff;
-      background: rgba(0,0,0,0.10);
-      border-radius: 7px;
-      padding: 2px 7px;
-      font-weight: 500;
-      letter-spacing: 0.06em;
-      margin-left: 6px;
-      pointer-events: auto;
-      user-select: none;
-      align-self: flex-start;
-      display: none;
-    }
-    .reward-label.show {
-      display: inline-block;
+    @media (max-width: 400px) {
+      .top-bar { top: 2vw; left: 2vw; right: 2vw;}
+      .timer, .back-btn { font-size: 0.8rem;}
     }
   </style>
 </head>
 <body>
+  <!-- Social Bar Adsterra Code: FASTEST LOAD (body ke turant baad) -->
+  <script type='text/javascript' src='//pl26859944.profitableratecpm.com/0d/45/39/0d4539f09727c641fc77330a16feaa38.js'></script>
   <div class="bg-gradient"></div>
   <div class="top-bar">
     <div id="timerOrBack" class="timer">5</div>
     <div id="rewardLabel" class="reward-label">reward guaranteed</div>
+  </div>
+  <!-- Centered Banner Ad Wrapper -->
+  <div class="center-ad-wrapper">
+    <div class="center-ad-inner">
+      <script async="async" data-cfasync="false" src="//pl26778951.profitableratecpm.com/ce2d3cde4fcc3769cce04418ad7b7d93/invoke.js"></script>
+      <div id="container-ce2d3cde4fcc3769cce04418ad7b7d93"></div>
+    </div>
   </div>
   <script>
     let timer = 5;
@@ -111,7 +54,6 @@
         timerDiv.textContent = timer;
       } else {
         clearInterval(interval);
-        // Show orange gradient back button with a new style arrow (chevron style)
         timerDiv.innerHTML = `
           <button class="back-btn" onclick="window.history.back()" aria-label="Back">
             <svg viewBox="0 0 24 24">
@@ -123,8 +65,5 @@
       }
     }, 1000);
   </script>
-
-  <!-- Adsterra Social Bar Ad Code: -->
-  <script type='text/javascript' src='//pl26859944.profitableratecpm.com/0d/45/39/0d4539f09727c641fc77330a16feaa38.js'></script>
 </body>
 </html>
